--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,3 +26,7 @@ jobs:
       - run: lhci autorun
         env:
           LHCI_GITHUB_APP_TOKEN: ${{ secrets.LHCI_GITHUB_APP_TOKEN }}
+      - uses: actions/upload-artifact@v2
+        with:
+          path: |
+            lighthouse/
